--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "security": {
+              "autoCsp": false
+            },
             "outputPath": "dist/angular-19",
             "index": "src/index.html",
             "browser": "src/main.ts",
